src/test/test-models/bad/validate_set_double_locscale_bad5.stan
parameters {
  real<location=positive_infinity()> a;
  real y;
}

model {
  y ~ normal(0,1);
}
